# ETL-Pipeline

./: .dockerignore  .gitignore  Dockerfile  Readme.md  dag.py  docker-compose.yaml  etl_pipeline.py  first_dag.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  daily_etl.yml
config/: airflow.cfg  schema.sql
dags/: dag.py
helper/: load_sheet.py
main/: config.py  email_service.py  etl_pipeline.py  extract.py  load.py  main_pipeline.py  tasks.py  transform.py  transform_asset.py  transform_user.py  validate.py
main/utils/: cleansing.py  cleansing_asset.py  cleansing_user.py  common.py  config_database.py  coordinate_cleaner.py  create_database.py  data_cleansing.py  proces_clean_coor.py
test/: test_extract.py  test_pipeline.py
