[project]
name = "etl-pipeline"
version = "0.1.0"
description = "ETL Pipeline database aset and user"
authors = [
    {name = "None"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.40.1,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "azure-ai-projects (>=1.0.0b11,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"