[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.169.0,<3.0.0",
    "google-auth>=2.40.1,<3.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0",
    "gspread>=6.2.1,<7.0.0",
    "numpy>=2.2.6,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pyarrow>=20.0.0,<21.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
]
